--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.2.1",
+    "sass-embedded": "^1.97.3",
     "vite": "^6.0.0",
     "vite-plugin-static-copy": "^2.2.0"
   },
